kubenet/configmap-env.yml
apiVersion : v1
kind: Pod
metadata:
  name: configmap-env-pod
spec:
  containers:
    - name: configmap-env-pod
      image: alpine
      command: ["sleep","3600"]
