kubenet/startupprobe.yml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-probe
spec:
  containers:
    - name: liveness-nginx
      image: k8s.gcr.io/nginx
      startupProbe:
        httpGet:
          port: 80
          path: /
        failureThreshold: 30
        periodSeconds: 10
