kubenet/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30099
